--- a/ABJC/de.lproj/Localizable.strings
+++ b/ABJC/de.lproj/Localizable.strings
@@ -57,13 +57,34 @@
 "pref.serverinfo.host.label" = "Host";
 "pref.serverinfo.port.label" = "Port";
 
+"pref.debugmenu.label" = "Debugging";
+"pref.debugmenu.images.label" = "Image Loading / Caching";
+"pref.debugmenu.images.identifier" = "Identifier";
+"pref.debugmenu.images.cleanupcache" = "clean up";
+"pref.debugmenu.images.clearcache" = "clear cache";
+
+"pref.debugmenu.images.cachePolicy" = "cache policy";
+"pref.debugmenu.images.expiryInterval" = "Expiry Interval";
+"pref.debugmenu.images.cachepolicy.ignoreCache" = "ignore cache";
+"pref.debugmenu.images.cachepolicy.returnCacheDontLoad" = "return cache, don't reload";
+"pref.debugmenu.images.cachepolicy.returnCacheElseLoad" = "return cache else reload";
+
+"pref.client.label" = "Client";
+"pref.client.tabs.watchnow" = "Watch Now Tab";
+"pref.client.tabs.movies" = "Movies Tab";
+"pref.client.tabs.series" = "Series Tab";
+"pref.client.tabs.search" = "Search Tab";
+"pref.client.tabs.label" = "Movies Tab";
+
+"pref.client.betaflags.label" = "Beta Flags";
+"pref.client.betaflags.playbackreporting" = "Playback Reporting";
 
 // ItemDetailView
 "itemdetail.recommended.label" = "Empfohlen";
 "itemdetail.episode.item" = "Episode";
 
-
 // Alerts
 "alerts.apierror" = "API Fehler";
+"alerts.info" = "Information";
 "alerts.playbackerror" = "Playback Error";
 "alerts.playbackerror.descr" = "Could not play the requested item";
