UI Optimizations - removed URLImage options (now using global) - replaced some LazyVStacks (now VStack) to limit loading times

--- a/ABJC/de.lproj/Localizable.strings
+++ b/ABJC/de.lproj/Localizable.strings
@@ -78,6 +78,7 @@
 
 "pref.client.betaflags.label" = "Beta Flags";
 "pref.client.betaflags.playbackreporting" = "Playback Reporting";
+"pref.client.betaflags.playbackcontinuation" = "Playback Continuation";
 
 // ItemDetailView
 "itemdetail.recommended.label" = "Empfohlen";
